# belajar-python

./: .gitignore
dasar/: dict.py
oop/: class_user.py
oop/oop-flow/: oop-flow-challenge.md  oop_flow_1.py  oop_flow_2.py  oop_flow_3.py  oop_flow_4.py  oop_flow_5.py
oop/polymorphism/: polymorphism_1.py  polymorphism_2.py  polymorphism_3.py  polymorphism_challenge.md
oop/super/: challenge-1.py  challenge-3.py  challenge-4.py  challenge-5.py  challenge-super.md  challenge_2.py  challenge_5.py
playwright/: pyproject.toml
playwright/1-dasar/: main.py  pyproject.toml
pytest/1-pytest-dasar/: pyproject.toml  pytest-dasar-challenge.md
pytest/1-pytest-dasar/test/: challenge_2.py  challenge_3.md  test_challenge_1.py  test_math.py
pytest/2-fixture/: main.py  pyproject.toml
pytest/2-fixture/test/: test_challenge_1.py
pytest/2-fixture/test/1-fixture-dasar/: test_challenge_1.py  test_challenge_2.py  test_challenge_3.py
pytest/2-fixture/test/2-yield/: test_challenge_2.py  test_challenge_3.py
pytest/2-fixture/test/3-scope/: test_challenge_1.py  test_challenge_2.py
pytest/2-fixture/test/4-conftest/: conftest_challenge.md
pytest/2-fixture/test/4-parametrize/: parametrize_challenge.md  test_challenge_1.py  test_challenge_2.py  test_challenge_3.py
pytest/2-fixture/test/6-marker/: marker_challenge.md  test_challenge_1.py  test_challenge_5.py
pytest/2-fixture/tests/3-scope/: test_challenge_3.py
pytest/2-fixture/tests/5-parametrize/: parametrize_challenge.md
pytest/2-fixture/tests/6-marker/: test_challenge_2.py  test_challenge_3.py  test_challenge_4.py
(+24 files in other folders)
