[project]
name = "pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.sources]
pytest = { workspace = true }

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "challenge_*.py"]

