[project]
name = "2-fixture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = [
    "smoke: Smoke tests",
    "regretion: Regretion test",
    "ui: UI tests",
    "api: API tests",
]